# presto-benchmarking

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  pyproject.toml  workflow_config.yaml
configs/: default.yaml  no_metad.yaml  no_min.yaml  no_reg.yaml  one_it.yaml
convenience_functions/: __init__.py  _cli.py  combine_ffs.py  get_qca_input.py  run_presto.py  split_qca_input.py
convenience_functions/protein_2d_torsions/: __init__.py  get_qca_input.py  minimise.py  plot.py
workflow/: README.md  Snakefile
workflow/input_forcefields/: bespoke-1.3.0-default.offxml  sage-default-bespoke.offxml
workflow/jacs_set_conformers/scripts/: analyse.py
