[project]
name = "presto-benchmark"
version = "0.1.0"
description = "Presto benchmarking workflow"
requires-python = ">=3.12"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda", "openeye"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12"

[tool.pixi.dependencies]
python = ">=3.12"
pip = "*"
pyyaml = "*"
datasets = "*"
jupyter = "*"
nglview = "*"
smirnoff-plugins = ">=0.0.4"
openmm = "*"
openmm-ml = ">=1.5"
openff-toolkit = "*"
openff-units = "*"
openff-qcsubmit = ">=0.55.0"
openff-interchange = "*"
tensorboardX = "*"
tensorboard = "*"
versioneer = "*"
pytorch-gpu = "*"
pydantic = ">=2"
pydantic-settings = "*"
loguru = "*"
qcelemental = "*"
seaborn = "*"
snakemake = "*"
snakemake-executor-plugin-slurm = "*"
pydantic-units = "*"
qcfractal = ">=0.63"
cuda-version = ">=12"
ipdb = "*"
bokeh = "*"
panel = "*"
openbabel = "*"
crest = "*"
statannotations = "*"
pingouin = ">=0.5.5,<0.6"
openmm-torch = "*"
torchmd-net = "*"
openmmforcefields = ">=0.15.1,<0.16"
openeye-toolkits = ">=2025.2.1,<2026"
ruff = "*"
mypy = "*"
pre-commit = "*"

[tool.pixi.pypi-dependencies]
presto-benchmark = { path = ".", editable = true }
mace-torch = "*"
smee = { git = "https://github.com/openforcefield/smee.git", rev = "36bc8286b16ae815f13cfb10d8096ff1b9aeca0e" }
descent = { git = "https://github.com/openforcefield/descent", rev = "15101d021d2a387809f0d877c61d4baabecdc78e" }
presto = { git = "https://github.com/cole-group/presto.git", rev = "ecb2e96b4f317d1499266adeda607636959b232d"}
yammbs = { git = "https://github.com/openforcefield/yammbs", rev = "231f138de3f27582da65193679c15c371cc72236" }
deepchem = { version = ">=2.7.0", extras = ["jax"] } # Seems to interfere with pytorch if ["torch"]

[tool.setuptools.package-dir]
"presto_benchmark" = "convenience_functions"

[tool.setuptools.packages.find]
where = ["."]
include = ["convenience_functions*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pixi.tasks]
pre-commit = { cmd = "pre-commit run --all-files" }
lint = { cmd = "ruff check convenience_functions" }
format = { cmd = "ruff format convenience_functions && ruff check --fix --select I convenience_functions" }
type-check = { cmd = "mypy --follow-imports=silent --ignore-missing-imports --strict convenience_functions" }
