[project]
name = "presto-benchmark"
version = "0.1.0"
description = "Presto benchmarking workflow"
requires-python = ">=3.12"

[project.scripts]
presto-benchmark = "convenience_functions._cli:app"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda", "openeye"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12"

[tool.pixi.feature.common.dependencies]
python = ">=3.12"
pip = "*"
openff-toolkit = "*"
openff-units = "*"
openff-qcsubmit = ">=0.55.0"
openff-interchange = "*"
smirnoff-plugins = ">=2025.09.0"
loguru = "*"
seaborn = "*"
snakemake = "*"
snakemake-executor-plugin-slurm = "*"
ipdb = "*"
bokeh = "*"
panel = "*"
openbabel = "*"
crest = "*"
statannotations = "*"
pingouin = ">=0.5.5,<0.6"
openmmforcefields = ">=0.15.1,<0.16"
openeye-toolkits = ">=2025.2.1,<2026"
ruff = "*"
mypy = "*"
pre-commit = "*"
mdanalysis = ">=2.10.0,<3"
typer = "*"
qcelemental = "*"
nglview = "*"
jupyter = "*"
qcfractal = ">=0.63"

[tool.pixi.feature.common.pypi-dependencies]
presto-benchmark = { path = ".", editable = true }

[tool.pixi.feature.standard.dependencies]
pyyaml = "*"
datasets = "*"
openmm = "*"
openmm-ml = ">=1.5"
tensorboardX = "*"
tensorboard = "*"
versioneer = "*"
pytorch-gpu = "*"
pydantic = ">=2"
pydantic-settings = "*"
pydantic-units = "*"
cuda-version = ">=12"
openmm-torch = "*"
torchmd-net = "*"

[tool.pixi.feature.standard.pypi-dependencies]
mace-torch = "*"
smee = { git = "https://github.com/openforcefield/smee.git", rev = "36bc8286b16ae815f13cfb10d8096ff1b9aeca0e" }
descent = { git = "https://github.com/openforcefield/descent", rev = "15101d021d2a387809f0d877c61d4baabecdc78e" }
presto = { git = "https://github.com/cole-group/presto.git", rev = "ecb2e96b4f317d1499266adeda607636959b232d"}
# yammbs = { git = "https://github.com/openforcefield/yammbs", rev = "231f138de3f27582da65193679c15c371cc72236" }
yammbs = { git = "https://github.com/openforcefield/yammbs", rev = "faster_datasets" }
deepchem = { version = ">=2.7.0", extras = ["jax"] } # Seems to interfere with pytorch if ["torch"]

[tool.pixi.feature.espaloma.dependencies]
espaloma = ">=0.3.1"

[tool.pixi.environments]
default = {features = ["common", "standard"]}
espaloma = {features = ["common", "espaloma"]}

[tool.setuptools.package-dir]
"presto_benchmark" = "convenience_functions"

[tool.setuptools.packages.find]
where = ["."]
include = ["convenience_functions*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pixi.tasks]
pre-commit = { cmd = "pre-commit run --all-files" }
lint = { cmd = "ruff check convenience_functions" }
format = { cmd = "ruff format convenience_functions && ruff check --fix --select I convenience_functions" }
type-check = { cmd = "mypy --follow-imports=silent --ignore-missing-imports --strict convenience_functions" }
